# JSON-Port-Config

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.deps  GUI.cpp  GUI.hpp  LICENSE  PortJSONWriter.cpp  PortJSONWriter.sln  PortJSONWriter.vcxproj  PortJSONWriter.vcxproj.filters  README.md  TypeLoader.cpp  TypeLoader.hpp  Uploader.cpp  Uploader.hpp  main.cpp
